--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "cors": "^2.8.0",
     "cron": "^1.1.0",
     "express": "^4.14.0",
-    "mongoose": "^4.6.0",
-    "slackbots": "^0.5.2"
+    "mongoose": "^4.6.0"
   }
 }
